mylang/tests/fail/f9.pas
program

function func(var i: int): int
begin
    func := 1
end;

begin
    func(1)
end@



